; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_cafe_ccic.c_cafe_set_config_needed.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_cafe_ccic.c_cafe_set_config_needed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cafe_camera = type { i32 }

@CF_CONFIG_NEEDED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cafe_camera*, i32)* @cafe_set_config_needed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cafe_set_config_needed(%struct.cafe_camera* %0, i32 %1) #0 {
  %3 = alloca %struct.cafe_camera*, align 8
  %4 = alloca i32, align 4
  store %struct.cafe_camera* %0, %struct.cafe_camera** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %2
  %8 = load i32, i32* @CF_CONFIG_NEEDED, align 4
  %9 = load %struct.cafe_camera*, %struct.cafe_camera** %3, align 8
  %10 = getelementptr inbounds %struct.cafe_camera, %struct.cafe_camera* %9, i32 0, i32 0
  %11 = call i32 @set_bit(i32 %8, i32* %10)
  br label %17

12:                                               ; preds = %2
  %13 = load i32, i32* @CF_CONFIG_NEEDED, align 4
  %14 = load %struct.cafe_camera*, %struct.cafe_camera** %3, align 8
  %15 = getelementptr inbounds %struct.cafe_camera, %struct.cafe_camera* %14, i32 0, i32 0
  %16 = call i32 @clear_bit(i32 %13, i32* %15)
  br label %17

17:                                               ; preds = %12, %7
  ret void
}

declare dso_local i32 @set_bit(i32, i32*) #1

declare dso_local i32 @clear_bit(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
